<resources>
    <string name="app_name">CineApp</string>
    <string name="sign_up">Sign up</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="bustopolis">BUSTOPOLIS</string>
    <string name="log_intxt">Log in</string>
    <string name="titulo">Titulo</string>
    <string name="tiempo">Tiempo</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="url_imagen">Url imagen</string>
    <string name="crear">CREAR</string>
    <string name="atras">atras</string>
    <string name="crear_pelicula">CREAR PELICULA</string>
    <string name="genero">Genero</string>
    <string name="pegi">Pegi</string>
</resources>