<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cinebackground"
    tools:context=".LogInActivity">

    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="183dp"
        android:layout_height="66dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:backgroundTint="#A39393"
        android:scrollbarSize="12dp"
        android:text="Registrarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciarsesion_login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usuario_login"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@color/black"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BUSTOPOLIS"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/contra_login"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@color/black"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/usuario_login"
        app:layout_constraintStart_toStartOf="@+id/usuario_login"
        app:layout_constraintTop_toBottomOf="@+id/usuario_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/BUSTOPOLIS"
        android:layout_width="276dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:fontFamily="serif"
        android:text="@string/bustopolis"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_iniciarsesion_login"
        android:layout_width="183dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:backgroundTint="#A39393"
        android:scrollbarSize="12dp"
        android:text="INICIAR SESION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#FFEA00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_register_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/palomitas" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="128dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_register_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/palomitas" />
</androidx.constraintlayout.widget.ConstraintLayout>